@@ -1,6 +1,7 @@
 package pl.szczesniak.dominik.whattowatch.movies.infrastructure.adapters.outgoing.query;
 
 import lombok.RequiredArgsConstructor;
+import lombok.Value;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Service;
@@ -11,6 +12,7 @@ import pl.szczesniak.dominik.whattowatch.movies.query.model.MovieCommentQueryRes
 import pl.szczesniak.dominik.whattowatch.movies.query.model.MovieInListQueryResult;
 import pl.szczesniak.dominik.whattowatch.movies.query.model.MovieQueryResult;
 import pl.szczesniak.dominik.whattowatch.movies.query.model.MovieTagQueryResult;
+import pl.szczesniak.dominik.whattowatch.movies.query.model.PagedMovies;
 import pl.szczesniak.dominik.whattowatch.users.domain.model.UserId;
 
 import java.sql.ResultSet;
@@ -19,6 +21,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -27,6 +30,34 @@ public class JdbcMoviesToWatchQueryService implements MoviesQueryService {
 	private final NamedParameterJdbcTemplate jdbcTemplate;
 
 	@Override
+	public PagedMovies getMoviesToWatch(final UserId userId, final Integer page, final Integer moviesPerPage) {
+		final String sql = "SELECT m.id AS movie_id, m.movie_title " +
+				"FROM movie m " +
+				"WHERE m.user_id = :userId " +
+				"ORDER BY m.id " +
+				"LIMIT :limit OFFSET :offset";
+
+		final String countMoviesSql = "SELECT COUNT(*) " +
+				"FROM movie " +
+				"WHERE user_id = :userId";
+
+
+		final MapSqlParameterSource params = new MapSqlParameterSource();
+		params.addValue("userId", userId.getValue());
+		params.addValue("limit", moviesPerPage);
+		params.addValue("offset", (page - 1) * moviesPerPage);
+
+		final PaginationInfo paginationInfo = getPaginationInfo(moviesPerPage, countMoviesSql, params);
+
+		final List<MovieInListQueryResult> movies = getMovieInListQueryResults(sql, params);
+
+
+		return new PagedMovies(movies, page, paginationInfo.getTotalPages(), paginationInfo.getTotalMovies());
+	}
+
+	@Override
+	public PagedMovies getMoviesByTags(final List<MovieTagId> tags, final UserId userId, final Integer page, final Integer moviesPerPage) {
+		final String selectMoviesSql = "SELECT m.id, m.movie_title, m.user_id " +
 	public List<MovieInListQueryResult> getMoviesToWatch(final UserId userId) {
 		final String sql = "SELECT m.id, m.movie_title " +
 				"FROM movie m " +
@@ -46,22 +77,28 @@ public class JdbcMoviesToWatchQueryService implements MoviesQueryService {
 				"JOIN tags t ON mt.tags_tag_id = t.tag_id " +
 				"WHERE t.tag_id IN (:tagIds) AND m.user_id = :userId " +
 				"GROUP BY m.id, m.movie_title, m.user_id " +
-				"HAVING COUNT(DISTINCT t.tag_id) = :tagCount";
+				"HAVING COUNT(DISTINCT t.tag_id) = :tagCount " +
+				"ORDER BY m.id " +
+				"LIMIT :limit OFFSET :offset";
+
+		final String countMoviesSql = "SELECT COUNT(DISTINCT m.id) " +
+				"FROM movie m " +
+				"JOIN movie_tags mt ON m.id = mt.movie_id " +
+				"JOIN tags t ON mt.tags_tag_id = t.tag_id " +
+				"WHERE t.tag_id IN (:tagIds) AND m.user_id = :userId";
 
 		final MapSqlParameterSource params = new MapSqlParameterSource();
 		params.addValue("userId", userId.getValue());
 		params.addValue("tagCount", tags.size());
-		params.addValue("tagIds", tags.stream().map(MovieTagId::getValue).toList());
+		params.addValue("tagIds", tags.stream().map(MovieTagId::getValue).collect(Collectors.toList()));
+		params.addValue("limit", moviesPerPage);
+		params.addValue("offset", (page - 1) * moviesPerPage);
 
-		return getMovies(sql, params);
-	}
+		final List<MovieInListQueryResult> movies = getMovieInListQueryResults(selectMoviesSql, params);
 
-	private List<MovieInListQueryResult> getMovies(final String sql, final MapSqlParameterSource params) {
-		return jdbcTemplate.query(sql, params, (rs, rowNum) ->
-				new MovieInListQueryResult(
-						rs.getInt("id"),
-						rs.getString("movie_title"))
-		);
+		final PaginationInfo paginationInfo = getPaginationInfo(moviesPerPage, countMoviesSql, params);
+
+		return new PagedMovies(movies, page, paginationInfo.getTotalPages(), paginationInfo.getTotalMovies());
 	}
 
 	@Override
@@ -78,37 +115,26 @@ public class JdbcMoviesToWatchQueryService implements MoviesQueryService {
 		params.addValue("movieId", movieId.getValue());
 		params.addValue("userId", userId.getValue());
 
-		final Set<MovieCommentQueryResult> comments = new HashSet<>();
-		final Set<MovieTagQueryResult> tags = new HashSet<>();
+		return jdbcTemplate.query(sql, params, rs -> {
+			if (rs.next()) {
+				final MovieQueryResult result = new MovieQueryResult(
+						rs.getInt("movie_id"),
+						rs.getString("movie_title"),
+						new HashSet<>(),
+						new HashSet<>()
+				);
 
-		final Optional<MovieQueryResult> query = jdbcTemplate.query(sql, params, rs -> {
-			MovieQueryResult result = null;
-			while (rs.next()) {
-				if (result == null) {
-					result = new MovieQueryResult(
-							rs.getInt("movie_id"),
-							rs.getString("movie_title"),
-							new HashSet<>(),
-							new HashSet<>()
-					);
-				}
+				fillComments(rs, result.getComments());
+				fillTags(rs, result.getTags());
 
-				addComment(rs, comments);
-				addTag(rs, tags);
+				return Optional.of(result);
+			} else {
+				return Optional.empty();
 			}
-
-			return Optional.ofNullable(result);
 		});
-
-		if (query.isPresent()) {
-			comments.forEach(comment -> query.get().getComments().add(comment));
-			tags.forEach(tag -> query.get().getTags().add(tag));
-		}
-
-		return query;
 	}
 
-	private static void addComment(final ResultSet rs, final Set<MovieCommentQueryResult> comments) throws SQLException {
+	private static void fillComments(final ResultSet rs, final Set<MovieCommentQueryResult> comments) throws SQLException {
 		if (rs.getString("comment_id") != null) {
 			comments.add(
 					new MovieCommentQueryResult(
@@ -118,7 +144,7 @@ public class JdbcMoviesToWatchQueryService implements MoviesQueryService {
 		}
 	}
 
-	private static void addTag(final ResultSet rs, final Set<MovieTagQueryResult> movieQueryResult) throws SQLException {
+	private static void fillTags(final ResultSet rs, final Set<MovieTagQueryResult> movieQueryResult) throws SQLException {
 		if (rs.getString("tag_id") != null) {
 			movieQueryResult.add(
 					new MovieTagQueryResult(
@@ -148,9 +174,9 @@ public class JdbcMoviesToWatchQueryService implements MoviesQueryService {
 				);
 
 				return Optional.of(result);
+			} else {
+				return Optional.empty();
 			}
-
-			return Optional.empty();
 		});
 	}
 
@@ -169,9 +195,36 @@ public class JdbcMoviesToWatchQueryService implements MoviesQueryService {
 					rs.getString("tag_label"),
 					rs.getInt("tag_user_id")
 			);
-
 			return movieTagQueryResult;
 		});
+	}
+
+	private List<MovieInListQueryResult> getMovieInListQueryResults(final String sql, final MapSqlParameterSource params) {
+		final List<MovieInListQueryResult> movies = jdbcTemplate.query(sql, params, (rs, rowNum) ->
+				new MovieInListQueryResult(
+						rs.getInt("id"),
+						rs.getString("movie_title"))
+		);
+		return movies;
+	}
+
+	private PaginationInfo getPaginationInfo(final Integer moviesPerPage, final String countMoviesSql, final MapSqlParameterSource params) {
+		int totalMovies = 0;
+		int totalPages = 0;
+
+		final List<Integer> result = jdbcTemplate.query(countMoviesSql, params, (resultSet, i) -> resultSet.getInt(1));
+		if (!result.isEmpty()) {
+			totalMovies = result.get(0);
+			totalPages = (int) Math.ceil((double) totalMovies / moviesPerPage);
+		}
+
+		return new PaginationInfo(totalMovies, totalPages);
+	}
+
+	@Value
+	private static class PaginationInfo {
+		Integer totalMovies;
+		Integer totalPages;
 	}
 
 }
